[refactor] Vite로 전환 및 alias 규칙 변경

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
-  },
-  "includes": ["src"]
+    "baseUrl": "src",
+    "paths": {
+      "components/*": ["components/*"],
+      "redux/*": ["redux/*"],
+      "scss/*": ["scss/*"],
+      "assets/*": ["assets/*"]
+    }
+  }
 }
