--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^22.5.2",
+    "@types/react": "^18.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.1.0",
+    "@reduxjs/toolkit": "^2.2.0",
     "react-router-dom": "^6.6.1",
-    "redux": "^4.2.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
+    "typescript": "^5.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.4.2"
   }
