--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^9.1.0",
-    "@reduxjs/toolkit": "^2.2.0",
     "react-router-dom": "^6.6.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
@@ -40,6 +40,9 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.2"
   }
 }
