--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.6.1",
+    "rollup": "^4.22.5",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "^5.5.4",
